# smarthr-imedic

./: .gitignore  Dockerfile  LICENSE  README.md  create_dict.py  patterns.bash  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker.yml
