[project]
name = "smarthr-imedic"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "yasuyuky", email = "yasuyuki.ymd@gmail.com" }
]
dependencies = ["requests==2.32.1"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
